--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hola
-    Hola
-    hola
-    dasdsa
+<h1>Hola Como estan </h1>
+
 </body>
 </html>
